...
            KeySpec("7", 0x24, secondary = "&"),
            KeySpec("8", 0x25, secondary = "*"),
            KeySpec("9", 0x26, secondary = "("),
            KeySpec("0", 0x27, secondary = ")"),
            KeySpec("-", 0x2D, secondary = "_"),
            KeySpec("=", 0x2E, secondary = "+"),
            KeySpec("Backspace", 0x2A, 2f),
        ),
        listOf(
            KeySpec("Tab", 0x2B, 1.5f),
            KeySpec("Q", 0x14), KeySpec("W", 0x1A), KeySpec("E", 0x08),
            KeySpec("R", 0x15), KeySpec("T", 0x17), KeySpec("Y", 0x1C),
            KeySpec("U", 0x18), KeySpec("I", 0x0C), KeySpec("O", 0x12),
...
